# pandas-reporter

./: CHANGELOG.md  README.md  piemaker.yml  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml  upgrade-deps-workflow.yaml
complexity/radon/: index.html  report.txt
coverage/coverage/: class_index.html  function_index.html  index.html  status.json  z_af84810556e3f88e___init___py.html  z_cc01d2a0e216785b___init___py.html  z_cc01d2a0e216785b_html_py.html  z_cc01d2a0e216785b_json_py.html  z_cc01d2a0e216785b_text_py.html  z_cc01d2a0e216785b_yaml__py.html
doc/sphinx/: conf.py  genindex.html  index.html  index.rst  objects.inv  pandasreporter.formatters.html  pandasreporter.formatters.rst  pandasreporter.html  pandasreporter.rst  search.html  searchindex.js
doc/sphinx/_build/doctrees/: environment.pickle  index.doctree  pandasreporter.doctree  pandasreporter.formatters.doctree
doc/sphinx/_build/html/: .buildinfo  (+7 more)
doc/sphinx/_sources/: index.rst.txt  pandasreporter.rst.txt
examples/: _pandasreporter.py  pandasreporter-lib.sh
examples/reports/: report-maxcolsize.html  report-styled.html  report.html  report.json  report.txt  report.yaml
lint/pylint/: index.html  report.json
pandasreporter/: __init__.py
pandasreporter/formatters/: html.py
test-integration/pytest/: index.html
test/pytest/: index.html
tests/: test_pandasreporter.py
tests-integration/: test_constructor.py  test_html_report.py  test_json_report.py  test_text_report.py  test_yaml_report.py
tests/formatters/: test_html.py  test_json.py  test_text.py  test_yaml.py
(+1 files in other folders)
